--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Trevor
+name: Trevor Farthing
 
 # Controls when the workflow will run
 on:
